@@ -12,8 +12,7 @@
 <div>
     <strong><a href=
             "http://trac.cyberduck.ch/query?status=closed&amp;milestone=3.2.1">
-        3.2.1</a></strong> (Build 4500)<br/>
-
+        3.2.1</a></strong> (Build $Revision$)<br/>
     <ul>
         <li>[Feature] Create placeholder objects for virtual directory (S3)</li>
         <li>[Feature] Info window displays signed temporary public URL with a default validity of 24 hours (S3)</li>
@@ -27,67 +26,9 @@
         </li>
         <li>[Bugfix] MobileMe iDisk upload failures (WebDAV) [<a href="http://trac.cyberduck.ch/ticket/3149">#3149</a>]
         </li>
-    </ul>
-</div>
-<div>
-    <strong><a href=
-            "http://trac.cyberduck.ch/query?status=closed&amp;milestone=3.2">
-        3.2</a></strong> (Build $Revision$)<br/>
-
-    <ul>
-        <li>[Feature] Choose Time Zone for bookmark (FTP) [<a href="http://trac.cyberduck.ch/ticket/434">#434</a>]</li>
-        <li>[Feature] IPv6 Interoperability with support for EPSV and EPRT commands (FTP) [<a
-                href="http://trac.cyberduck.ch/ticket/2539">#2539</a>, <a href="http://trac.cyberduck.ch/ticket/2539">#2885</a>]
+        <li>[Bugfix] Overwrite action causes empty downloaded file [<a
+                href="http://trac.cyberduck.ch/ticket/3252">#3252</a>]
         </li>
-        <li>[Feature] UTF8 charset negotiation [<a href="http://tools.ietf.org/html/draft-ietf-ftpext-utf-8-option-00">draft-ietf-ftpext-utf-8-option-00</a>]
-            (FTP)
-        </li>
-        <li>[Feature] Support for directory listings using MLSD [<a href="http://tools.ietf.org/html/rfc3659">RFC
-            3659</a>] (FTP)
-        </li>
-        <li>[Feature] Support for Modification Time (MFMT) extension [<a
-                href="http://tools.ietf.org/html/draft-somers-ftp-mfxx-04">draft-somers-ftp-mfxx-04</a>] (FTP)
-        </li>
-        <li>[Feature] Support for hierarchical directory structure (Mosso)</li>
-        <li>[Feature] Added Espresso to the list of supported editors (http://macrabbit.com/espresso/) [<a
-                href="http://trac.cyberduck.ch/ticket/2823">#2823</a>]
-        </li>
-        <li>[Feature] Display date of transfer [<a href="http://trac.cyberduck.ch/ticket/1462">#1462</a>]</li>
-        <li>[Feature] Display percentage transferred [<a href="http://trac.cyberduck.ch/ticket/2618">#2618</a>]</li>
-        <li>[Feature] Option for big sized icons in bookmark list</li>
-        <li>[Feature] Drag URL to browser window to open connection [<a href="http://trac.cyberduck.ch/ticket/2326">#2326</a>]
-        </li>
-        <li>[Feature] Display realm of HTTP authentication (WebDAV) [<a href="http://trac.cyberduck.ch/ticket/3083">#3083</a>]
-        </li>
-        <li>[Bugfix] Update passwords in Keychain [<a href="http://trac.cyberduck.ch/ticket/2984">#2984</a>]</li>
-        <li>[Bugfix] Only reauthenticate when needed (Mosso) [<a href="http://trac.cyberduck.ch/ticket/2876">#2876</a>]
-        </li>
-        <li>[Bugfix] Invalid Origin parameter when creating CloudFront distribution (S3) [<a
-                href="http://trac.cyberduck.ch/ticket/3068">#3068</a>]
-        </li>
-        <li>[Bugfix] Improve Interoperability (WebDAV) [<a href="http://trac.cyberduck.ch/ticket/2974">#2974</a>, <a
-                href="http://trac.cyberduck.ch/ticket/3076">#3076</a>]
-        </li>
-        <li>[Bugfix] Different recursive permissions for directory and files [<a
-                href="http://trac.cyberduck.ch/ticket/1787">#1787</a>]
-        </li>
-    </ul>
-</div>
-<div>
-    <strong><a href=
-            "http://trac.cyberduck.ch/query?status=closed&amp;milestone=3.1.2">
-        3.1.2</a></strong> (Build 4500)<br/>
-
-    <ul>
-        <li>[Feature] Enforce hostname verification (SSL)</li>
-        <li>[Feature] Improved container listing performance (Mosso)</li>
-        <li>[Feature] Updated bookmark icons (by Robert Curtis)</li>
-        <li>[Bugfix] Fix Amazon CloudFront distribution configuration</li>
-        <li>[Bugfix] Accept valid certificates without prompt if no explicit trust is given (SSL)</li>
-        <li>[Bugfix] Files not downloaded recursively (S3)</li>
-        <li>[Bugfix] Create and expand archives with space in filename [#2884]</li>
-        <li>[Bugfix] Incorrect CDN URI for public containers (Mosso) [#2875]</li>
-        <li>[Bugfix] Observe bandwidth setting for uploads (Mosso/WebDAV)</li>
     </ul>
 </div>
 </body>
